--- a/src/app/views/detalle/detalle.component.html
+++ b/src/app/views/detalle/detalle.component.html
@@ -261,29 +261,56 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-<ion-tab-button tab="home" (click)="goToHome()">
-  <ion-icon name="home-outline"></ion-icon>
-  <ion-label>Inicio</ion-label>
-</ion-tab-button>
+  <ion-toolbar class="scrollable-toolbar">
+    <!-- Indicador de deslizamiento -->
+    <div class="scroll-hint">
+      <ion-icon name="arrow-forward-outline"></ion-icon>
+      <span>Desliza para más opciones</span>
+    </div>
 
+    <!-- Tabs -->
+    <div class="scrollable-tabs">
+      <!-- Tab: Inicio -->
+      <div class="tab-item" (click)="goToHome()">
+        <ion-icon name="home-outline"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </div>
 
-        <ion-tab-button tab="store" (click)="goToTienda()">
-          <ion-icon name="storefront-outline"></ion-icon>
-          <ion-label>Tienda</ion-label>
-        </ion-tab-button>
+      <!-- Tab: Tienda -->
+      <div class="tab-item" (click)="goToTienda()">
+        <ion-icon name="storefront-outline"></ion-icon>
+        <ion-label>Tienda</ion-label>
+      </div>
 
-        <ion-tab-button tab="notifications">
-          <ion-icon name="notifications-outline"></ion-icon>
-          <ion-label>Notificaciones</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="more">
-          <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
-          <ion-label>Más</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
+      <!-- Tab: Notificaciones -->
+      <div class="tab-item">
+        <ion-icon name="notifications-outline"></ion-icon>
+        <ion-label>Notificaciones</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Perfil -->
+      <div class="tab-item">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Favoritos -->
+      <div class="tab-item">
+        <ion-icon name="heart-outline"></ion-icon>
+        <ion-label>Favoritos</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Configuración -->
+      <div class="tab-item">
+        <ion-icon name="settings-outline"></ion-icon>
+        <ion-label>Configuración</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Ayuda -->
+      <div class="tab-item">
+        <ion-icon name="help-circle-outline"></ion-icon>
+        <ion-label>Ayuda</ion-label>
+      </div>
+    </div>
   </ion-toolbar>
 </ion-footer>
