--- a/src/app/views/oferta/oferta.component.html
+++ b/src/app/views/oferta/oferta.component.html
@@ -71,3 +71,58 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar class="scrollable-toolbar">
+    <!-- Indicador de deslizamiento -->
+    <div class="scroll-hint">
+      <ion-icon name="arrow-forward-outline"></ion-icon>
+      <span>Desliza para más opciones</span>
+    </div>
+
+    <!-- Tabs -->
+    <div class="scrollable-tabs">
+      <!-- Tab: Inicio -->
+      <div class="tab-item">
+        <ion-icon name="home-outline" (click)="navigateTo('home')"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </div>
+
+      <!-- Tab: Tienda -->
+      <div class="tab-item">
+        <ion-icon name="storefront-outline" (click)="navigateTo('tienda')"></ion-icon>
+        <ion-label>Tienda</ion-label>
+      </div>
+
+      <!-- Tab: Notificaciones -->
+      <div class="tab-item">
+        <ion-icon name="notifications-outline" (click)="navigateTo('notificaciones')"></ion-icon>
+        <ion-label>Notificaciones</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Perfil -->
+      <div class="tab-item">
+        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Favoritos -->
+      <div class="tab-item">
+        <ion-icon name="heart-outline" (click)="navigateTo('favoritos')"></ion-icon>
+        <ion-label>Favoritos</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Configuración -->
+      <div class="tab-item">
+        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Configuración</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Ayuda -->
+      <div class="tab-item">
+        <ion-icon name="help-circle-outline" (click)="navigateTo('ayuda')"></ion-icon>
+        <ion-label>Ayuda</ion-label>
+      </div>
+    </div>
+  </ion-toolbar>
+</ion-footer>
