--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -55,7 +55,7 @@
 
 <div class="product-grid">
   <div class="product-card">
-    <div class="product-image" (click)="goToDetail()">
+    <div class="product-image" (click)="navigateTo('detalle')">
       <img src="../../../assets/icon/rueda-removebg-preview.png" alt="Cubierta Fate Sentiva">
     </div>
     <h2 class="product-title">Cubierta Fate Sentiva 195 65 15</h2>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="product-card">
-    <div class="product-image" (click)="goToDetail()">
+    <div class="product-image"  (click)="navigateTo('detalle')">
       <img src="../../../assets/icon/rueda-removebg-preview.png" alt="Cubierta Pirelli">
     </div>
     <h2 class="product-title">Cubierta Pirelli 205 55 16</h2>
@@ -75,7 +75,7 @@
     </div>
   </div>
   <div class="product-card">
-    <div class="product-image" (click)="goToDetail()">
+    <div class="product-image"  (click)="navigateTo('detalle')">
       <img src="../../../assets/icon/rueda-removebg-preview.png" alt="Cubierta Bridgestone">
     </div>
     <h2 class="product-title">Cubierta Bridgestone 185 60 14</h2>
@@ -85,7 +85,7 @@
     </div>
   </div>
   <div class="product-card">
-    <div class="product-image" (click)="goToDetail()">
+    <div class="product-image" (click)="navigateTo('detalle')">
       <img src="../../../assets/icon/rueda-removebg-preview.png" alt="Cubierta Michelin">
     </div>
     <h2 class="product-title">Cubierta Michelin 225 50 17</h2>
@@ -102,30 +102,56 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="home" >
-        <ion-icon name="home-outline"></ion-icon>
+  <ion-toolbar class="scrollable-toolbar">
+    <!-- Indicador de deslizamiento -->
+    <div class="scroll-hint">
+      <ion-icon name="arrow-forward-outline"></ion-icon>
+      <span>Desliza para más opciones</span>
+    </div>
+
+    <!-- Tabs -->
+    <div class="scrollable-tabs">
+      <!-- Tab: Inicio -->
+      <div class="tab-item">
+        <ion-icon name="home-outline" (click)="navigateTo('home')"></ion-icon>
         <ion-label>Inicio</ion-label>
-      </ion-tab-button>
+      </div>
 
-      <ion-tab-button tab="store">
-        <ion-icon name="storefront-outline"></ion-icon>
+      <!-- Tab: Tienda -->
+      <div class="tab-item">
+        <ion-icon name="storefront-outline" (click)="navigateTo('tienda')"></ion-icon>
         <ion-label>Tienda</ion-label>
-      </ion-tab-button>
+      </div>
 
-      <ion-tab-button tab="notifications">
-        <ion-icon name="notifications-outline"></ion-icon>
+      <!-- Tab: Notificaciones -->
+      <div class="tab-item">
+        <ion-icon name="notifications-outline" (click)="navigateTo('notificaciones')"></ion-icon>
         <ion-label>Notificaciones</ion-label>
-      </ion-tab-button>
+      </div>
 
-      <ion-tab-button tab="more">
-        <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
-        <ion-label>Más</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
-</ion-toolbar>
+      <!-- Nueva Tab: Perfil -->
+      <div class="tab-item">
+        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </div>
 
+      <!-- Nueva Tab: Favoritos -->
+      <div class="tab-item">
+        <ion-icon name="heart-outline" (click)="navigateTo('favoritos')"></ion-icon>
+        <ion-label>Favoritos</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Configuración -->
+      <div class="tab-item">
+        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Configuración</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Ayuda -->
+      <div class="tab-item">
+        <ion-icon name="help-circle-outline" (click)="navigateTo('ayuda')"></ion-icon>
+        <ion-label>Ayuda</ion-label>
+      </div>
+    </div>
+  </ion-toolbar>
 </ion-footer>
